# ocaml5-tutorial-icfp-22

./: .gitignore  README.md
code/: dune-project  echo_async.trace  ocaml5-tutorial-icfp-22.opam  ocaml5-tutorial-icfp-22.opam.template
code/_build/: .db  .digest-db  log
code/_build/default/.dune/: configurator  configurator.v2
code/_build/default/effects/: echo_async.ml  echo_unix.ml
code/_build/default/effects/.echo_async.eobjs/byte/: dune__exe__Echo_async.cmi  dune__exe__Echo_async.cmti
code/_build/default/effects/.echo_async.eobjs/native/: dune__exe__Echo_async.cmx
code/_build/default/effects/.echo_unix.eobjs/byte/: dune__exe__Echo_unix.cmi  dune__exe__Echo_unix.cmti
code/_build/default/effects/.echo_unix.eobjs/native/: dune__exe__Echo_unix.cmx
code/_build/default/effects/.merlin-conf/: exe-echo_async  exe-echo_unix
code/_build/default/effects/effio/: effio.cma  effio.cmxa  effio.cmxs  effio.ml-gen
code/_build/default/effects/effio/.effio.objs/: aio.ml.d  aio.mli.d  echo.ml.d  effio__Aio.intf.all-deps
code/_build/default/effects/effio/.merlin-conf/: lib-effio
code/_build/default/parallel/: counter_mutable.ml  counter_mutable_lock_parallel.ml  counter_mutable_parallel.ml  mandelbrot.ml  mandelbrot_multicore.ml
code/_build/default/parallel/.counter_atomic_parallel.eobjs/byte/: dune__exe__Counter_atomic_parallel.cmi  dune__exe__Counter_atomic_parallel.cmti
code/_build/default/parallel/.counter_atomic_parallel.eobjs/native/: dune__exe__Counter_atomic_parallel.cmx
code/_build/default/parallel/.counter_mutable.eobjs/byte/: dune__exe__Counter_mutable.cmi  dune__exe__Counter_mutable.cmti
code/_build/default/parallel/.counter_mutable.eobjs/native/: dune__exe__Counter_mutable.cmx
code/_build/default/parallel/.counter_mutable_lock_parallel.eobjs/byte/: dune__exe__Counter_mutable_lock_parallel.cmi  dune__exe__Counter_mutable_lock_parallel.cmti
code/_build/default/parallel/.counter_mutable_lock_parallel.eobjs/native/: dune__exe__Counter_mutable_lock_parallel.cmx
code/_build/default/parallel/.counter_mutable_parallel.eobjs/byte/: dune__exe__Counter_mutable_parallel.cmi  dune__exe__Counter_mutable_parallel.cmti
code/_build/default/parallel/.merlin-conf/: exe-counter_atomic_parallel  exe-counter_mutable  exe-counter_mutable_lock_parallel  exe-counter_mutable_parallel  exe-mandelbrot  exe-mandelbrot_multicore
code/effects/: dune  exceptions.ml  nested_handler.ml  server.ml  string_effect.ml  sum_effect.ml
code/effects/effio/: aio.ml  aio.mli  dune  echo.ml
code/effects/solved/: dune  exceptions.ml
code/eio/: dune  echo_eio.ml  file_eio.ml  file_lwt.ml
code/eio/solved/: dune  echo_eio.ml
code/parallel/: counter_atomic_parallel.ml  dune  fib_par.ml  matrix_multiplication.ml  new_domain.ml  nqueens.ml  random_dls.ml  sum_of_array.ml
code/parallel/solved/: dune  matrix_multiplication_multicore.ml  nqueens.ml  tak.ml
(+20 files in other folders)
