(lang dune 3.3)
(name ocaml5-tutorial-icfp-22)

(generate_opam_files true)

(source
 (github Sudha247/ocaml5-tutorial-icfp-22))

(authors "Sudha Parimala" "Marek Kubica")
(maintainers "Sudha Parimala" "Marek Kubica")

(package
 (name ocaml5-tutorial-icfp-22)
 (synopsis "OCaml 5 tutorial")
 (depends
  (ocaml
   (>= 5.0.0~alpha1))
  domainslib
  eio
  eio_main
  lwt
  runtime_events_tools))
