(executable
 (public_name echo_unix)
 (modules echo_unix)
 (package ocaml5-tutorial-icfp-22)
 (libraries effio))

(executable
 (public_name echo_async)
 (modules echo_async)
 (package ocaml5-tutorial-icfp-22)
 (libraries effio))

(executable
 (public_name string_effect)
 (modules string_effect)
 (package ocaml5-tutorial-icfp-22)
 (libraries effio))

(executable
 (public_name sum_effect)
 (modules sum_effect)
 (package ocaml5-tutorial-icfp-22)
 (libraries effio))
