(executable
 (name sum_of_array)
 (modules sum_of_array)
 (libraries domainslib))

(executable
 (name random_dls)
 (modules random_dls)
 (libraries domainslib))

(executable
 (name counter_mutable)
 (modules counter_mutable))

(executable
 (name new_domain)
 (modules new_domain))

(executable
 (name counter_mutable_parallel)
 (modules counter_mutable_parallel))

(executable
 (name counter_atomic_parallel)
 (modules counter_atomic_parallel))

(executable
 (name counter_mutable_lock_parallel)
 (modules counter_mutable_lock_parallel))

(executable
 (name fib_par)
 (modules fib_par)
 (libraries domainslib))

(executable
 (name matrix_multiplication)
 (modules matrix_multiplication)
 (flags :standard -w -21-27)
 (libraries domainslib))

(executable
 (name tak)
 (modules tak)
 (flags :standard -w -27-32-39)
 (libraries domainslib))
